# extsmail

./: .gitignore  .travis.yml  CHANGES.md  CREDITS  ChangeLog  HISTORY  INSTALL  Makefile.am  Makefile.in  README  README.md  TODO  common.c  common.h  conf.h  conf_parser.y  conf_tokenizer.l  configure.ac  configure.in  externals.h  externals_parser.y  externals_tokenizer.l  extsmail.1  extsmail.c  extsmail.conf.1  extsmail.conf.5  extsmail.externals.1  extsmail.externals.5  extsmaild.1  extsmaild.c  make_deb.sh
.github/workflows/: ci.yml
compat/: Makefile.am
debian/: changelog  control  copyright  rules  watch
debian/patches/: fix_implicit_declaration  series
debian/tests/: control
src/: Makefile.am  common.h  conf_parser.y  extsmaild.c
tests/: run.sh  test_normal_big.c  test_normal_small.c  test_read_all_fail.c  test_read_all_stall.c  test_slow_read.c  test_stderr_big_write.c  test_stderr_write.c  test_too_slow.c  test_too_slow2.c
